[gd_scene load_steps=40 format=2]

[ext_resource path="res://scripts/UI/EndScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/static/end_screen_diamond/diamond_count-t3.png" type="Texture" id=2]
[ext_resource path="res://assets/dynamic/cart/slime-cart/slime-cart-1.png" type="Texture" id=3]
[ext_resource path="res://assets/dynamic/cart/bomb-cart/bomb-cart-2.png" type="Texture" id=4]
[ext_resource path="res://assets/dynamic/cart/slime-cart/slime-cart-3.png" type="Texture" id=5]
[ext_resource path="res://assets/dynamic/cart/diamond-cart/diamond-cart-1.png" type="Texture" id=6]
[ext_resource path="res://assets/dynamic/cart/diamond-cart/diamond-cart-3.png" type="Texture" id=7]
[ext_resource path="res://assets/dynamic/cart/diamond-cart/diamond-cart-2.png" type="Texture" id=8]
[ext_resource path="res://assets/dynamic/cart/slime-cart/slime-cart-2.png" type="Texture" id=9]
[ext_resource path="res://assets/dynamic/cart/bomb-cart/bomb-cart-1.png" type="Texture" id=10]
[ext_resource path="res://assets/dynamic/cart/slime-cart/slime-cart-5.png" type="Texture" id=11]
[ext_resource path="res://assets/dynamic/cart/bomb-cart/bomb-cart-3.png" type="Texture" id=12]
[ext_resource path="res://assets/bg/end_screen_2.png" type="Texture" id=13]
[ext_resource path="res://assets/dynamic/cart/diamond-cart/diamond-cart-4.png" type="Texture" id=14]
[ext_resource path="res://assets/dynamic/cart/slime-cart/slime-cart-6.png" type="Texture" id=15]
[ext_resource path="res://assets/dynamic/cart/slime-cart/slime-cart-4.png" type="Texture" id=16]
[ext_resource path="res://assets/dynamic/cart/diamond-cart/diamond-cart-5.png" type="Texture" id=17]
[ext_resource path="res://assets/dynamic/cart/diamond-cart/diamond-cart-6.png" type="Texture" id=18]
[ext_resource path="res://assets/dynamic/cart/bomb-cart/bomb-cart-4.png" type="Texture" id=19]
[ext_resource path="res://assets/bg/end_screen_1.png" type="Texture" id=20]
[ext_resource path="res://assets/static/end_screen_diamond/diamond_count-t2.png" type="Texture" id=21]
[ext_resource path="res://assets/static/end_screen_diamond/diamond_count-t5.png" type="Texture" id=22]
[ext_resource path="res://assets/static/end_screen_diamond/diamond_count-t4.png" type="Texture" id=23]
[ext_resource path="res://assets/static/end_screen_diamond/diamond_count-t1.png" type="Texture" id=24]
[ext_resource path="res://assets/static/ProgressBar/ProgressBar-over-25-25-25.png" type="Texture" id=25]
[ext_resource path="res://assets/static/ProgressBar/ProgressBar-progress.png" type="Texture" id=26]
[ext_resource path="res://assets/static/ProgressBar/ProgressBar-under.png" type="Texture" id=27]
[ext_resource path="res://assets/UI/continue_btn.png" type="Texture" id=28]
[ext_resource path="res://assets/font/Pixellari.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://audio/ending_loop.ogg" type="AudioStream" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 21 ), ExtResource( 2 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 29 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 29 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 29 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 29 )

[node name="EndScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="EndScreen" type="AnimatedSprite" parent="."]
position = Vector2( 512, 304 )
frames = SubResource( 1 )

[node name="MinOne" type="AnimatedSprite" parent="."]
position = Vector2( 264, 216 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 2
playing = true

[node name="MinThree" type="AnimatedSprite" parent="."]
position = Vector2( 264, 384 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
playing = true

[node name="PlusOne" type="AnimatedSprite" parent="."]
position = Vector2( 760, 216 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
frame = 5
playing = true

[node name="DiamondIcon" type="AnimatedSprite" parent="."]
position = Vector2( 800, 400 )
frames = SubResource( 5 )
playing = true

[node name="EndTween" type="Tween" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 384.0
margin_top = 136.0
margin_right = 640.0
margin_bottom = 176.0
step = 0.2
texture_under = ExtResource( 27 )
texture_over = ExtResource( 25 )
texture_progress = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MinOneCount" type="Label" parent="."]
margin_left = 336.0
margin_top = 176.0
margin_right = 448.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 48, 48 )
custom_fonts/font = SubResource( 6 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinThreeCount" type="Label" parent="."]
margin_left = 336.0
margin_top = 344.0
margin_right = 448.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 48, 48 )
custom_fonts/font = SubResource( 7 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusCount" type="Label" parent="."]
margin_left = 576.0
margin_top = 176.0
margin_right = 688.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 48, 48 )
custom_fonts/font = SubResource( 8 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 576.0
margin_top = 344.0
margin_right = 688.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 48, 48 )
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="."]
visible = false
margin_left = 408.0
margin_top = 440.0
margin_right = 618.0
margin_bottom = 480.0
texture_normal = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
autoplay = true

[connection signal="timeout" from="TweenTimer" to="." method="_on_TweenTimer_timeout"]
[connection signal="button_down" from="Continue" to="." method="_on_Continue_button_down"]
